src/objects/Customer_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Customer or Business Customer</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer, Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Roles</relationshipLabel>
        <relationshipName>Customer_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <description>This will be sent back to Salesforce if MDM encounters an error.   It is a concatenation of the SF Id and Last Modified Date Time.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(LastModifiedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(LastModifiedDate - $System.OriginDateTime, 1), 86400)), 3, 3)),&apos;-&apos;,&apos;&apos;),&apos;:&apos;,&apos;&apos;),&apos; &apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;)</formula>
        <label>Correlation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <description>MDM</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <description>MDM</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Model_Group_search__c</fullName>
        <description>This field is populated via trigger when a Role is created, and it is simply the value for VIN__c.Product__c.Model_Group__c . The reason why it is not a formula is because when doing Lookup search (e.g. from a case), the search will not consider formula fields</description>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year_search__c</fullName>
        <description>This field is populated via trigger when a Role is created, and it is simply the value for VIN__c.Product__c.Model_Year__c . The reason why it is not a formula is because when doing Lookup search (e.g. from a case), the search will not consider formula fields. Also, the length suggestion should be 4 characters, but it was already set to 5 in the Product__c object.</description>
        <label>Model Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyProductRoleLastUpdateDate__c</fullName>
        <description>MDM</description>
        <label>Party Product Role Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PartyProductRoleLastUpdateUser__c</fullName>
        <description>MDM</description>
        <label>Party Product Role Last Update User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductValue__c</fullName>
        <formula>VIN__r.ProductValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>VIN__r.Product_Line__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_search__c</fullName>
        <description>This field is populated via trigger when a Role is created, and it is simply the value for VIN__c.Product__c.Product_Line__c. The reason why it is not a formula is because when doing Lookup search (e.g. from a case), the search will not consider formula fields</description>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleValue__c</fullName>
        <label>Role Value</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobuyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colesse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrantee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Value_search__c</fullName>
        <label>Role Value search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <description>Formula lookup to the UCID.  This is sent in the Workflow outbound message to MDM.</description>
        <formula>Contact__r.UCID__c</formula>
        <label>UCID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Serial_No__c</fullName>
        <description>Formula lookup to the VIN/Serial #. This is sent in the Workflow outbound message to MDM.</description>
        <formula>VIN__r.ProductSerialNumber__c</formula>
        <inlineHelpText>Formula lookup to the VIN/Serial #</inlineHelpText>
        <label>VIN/Serial #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Serial_No_search__c</fullName>
        <description>This field is populated via trigger when a Role is created, and it is simply the value for VIN__c.ProductSerialNumber__c . The reason why it is not a formula is because when doing Lookup search (e.g. from a case), the search will not consider formula fields</description>
        <label>VIN/Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>Customer Roles</relationshipLabel>
        <relationshipName>Customer_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer Role</label>
    <nameField>
        <displayFormat>Role-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Create_CustomerRole</fullName>
        <active>true</active>
        <description>Cannot create a customer role if a contact does not have a primary Address, a primary email, or a primary phone.</description>
        <errorConditionFormula>NOT(BEGINS($Profile.Name, &quot;API -&quot;)) &amp;&amp; NOT( ISBLANK( Contact__r.Id) ) &amp;&amp; (ISBLANK(Contact__r.Phone) &amp;&amp;  ISBLANK( Contact__r.Email) &amp;&amp;  ISBLANK( Contact__r.MailingCity) &amp;&amp; ISBLANK(Contact__r.MailingCountry))</errorConditionFormula>
        <errorMessage>Cannot create a customer role if a contact does not have a primary Address, a primary email, or a primary phone.</errorMessage>
    </validationRules>
</CustomObject>